# finetune_blog

./: Finetunning Blog V2.ipynb  Finetunning Blog.ipynb  Linear Adapter for Embedding Model.ipynb  README.md  blog.ipynb  pyproject.toml  test.py  train_lora.ipynb
data/: base_data.json  cleaned_base_data.json  taler.txt  triplet_data_test.json  triplet_data_val.json
images/: Finetunning Blog.ipynb
notebooks/: blog.ipynb  train.ipynb  triplet_data_test.json  triplet_data_val.json
taler/: mette-frederiksen-tale-ved-socialdemokratiets-kongres.txt  mette-frederiksens-1-maj-tale-2004.txt  mette-frederiksens-1-maj-tale-2015.txt  mette-frederiksens-1-maj-tale-2017.txt  mette-frederiksens-1-maj-tale-2024.txt  mette-frederiksens-8-marts-tale-2024.txt  mette-frederiksens-aabningstale-ved-folketingets-aabningsdebat.txt  mette-frederiksens-aarsmoedetale-2022.txt  mette-frederiksens-afsluttende-tale-ved-folketingets-aabning-2019.txt  mette-frederiksens-folkemoedetale-2017.txt  mette-frederiksens-grundlovstale-2022.txt  mette-frederiksens-grundlovstale-paa-terndruplund-2014.txt  mette-frederiksens-nytarstale.txt  mette-frederiksens-proklamationstale-efter-h-m-dronning-margrethe-ii-s-abdikation.txt  mette-frederiksens-radiohilsen-til-de-danske-arsmoder-i-sydslesvig.txt  mette-frederiksens-tale-efter-europa-parlamentsvalget.txt  mette-frederiksens-tale-i-anledning-af-h-m-dronningen-margrethe-ii-s-50-arsregeringsjubilaeum.txt  mette-frederiksens-tale-i-folketinget-i-anledning-af-besog-fra-ukraines-praesident-zelenskyy.txt  mette-frederiksens-tale-om-styrkelse-af-forsvaret.txt  (+61 more)
(+94 files in other folders)
