[project]
name = "finetune-blog"
version = "0.1.0"
description = "This is a project for a blog post showing an efficient way of finetunning an embedding model."
readme = "README.md"
requires-python = "==3.12.8"
dependencies = [
    "accelerate>=1.4.0",
    "datasets>=3.3.0",
    "huggingface-hub>=0.28.1",
    "jupyter>=1.1.1",
    "ollama>=0.4.7",
    "peft>=0.14.0",
    "psycopg>=3.2.4",
    "ruff>=0.9.6",
    "sentence-transformers>=3.4.1",
    "tqdm>=4.67.1",
    "transformers>=4.48.3",
]
